Fix module dependency